fix: wrapped up

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -158,7 +158,7 @@ table {
   border-collapse: collapse;
   margin: 40px 0;
   padding: 0;
-  width: 100%;
+  // width: 100%;
   table-layout: fixed;
   border-radius: 5px;
 }
@@ -296,6 +296,7 @@ table th {
     margin: 100px 0 20px 200px;
     display: flex;
     align-items: center;
+    padding: 20px 200px;
   }
 
   h1 {
